# polymarket-agent

./: .env.example  .gitignore  ARCHITECTURE_GUARD.md  CLAUDE.md  DECISIONS.md  LIVE_MODE_TODO.md  OPTIMUS_CLAUDEUS_API_PROMPT.md  PLAN.md  POLYMARKET_SKILL_INSTALLER.md  PRD.md  PRD_OPTIMUS_CLAUDEUS.md  PRD_slim.md  SPEC.md  TDD.md  TODO.md  _tmp_ai_vs_odds_analysis.py  _tmp_all_closures.py  _tmp_exit_table.py  _tmp_final_analysis.py  _tmp_final_compare.py  _tmp_final_table.py  _tmp_hold_counterfactual.py  _tmp_rolling.py  _tmp_sport_and_exits.py  analyze_deadzone.py  analyze_full.py  analyze_pnl.py  config.yaml  final_analysis.json  optimus-claudeus-bug-review.html  polymarket-api-guide.md  pyproject.toml  report.py  requirements.txt  reset_simulation.py  self_improve_program.md  sports_analysis.json  start_dashboard.py
.claude/: settings.json  settings.local.json
API Guides/: ODDS API guide.md  Public-ESPN-API-FULL.md  espn-api-guide.md  espn-api-index.md  pandascore-api-guide.md  pandascore-api-reference.md  pandascore-csgo-api-reference.md  pandascore-dota2-api-reference.md  pandascore-lol-api-reference.md  pandascore-valorant-api-reference.md  polymarket-api-index.md
ERİM/: PRODUCT PLANLAMASI.txt  TELEGRAM KOMUTLARI.txt
docs/: ai_context_exit_and_reentry_rules.md  bot-flowchart.html  dashboard-fmt-contract.md  espn_api_reference.md  god-file-refactor-prompt.md  testing-plan.md
guide yazım/: pandascore-MEGA-scraping-prompt.md  pandascore-full-api-reference.md
logs/: AWAITING_APPROVAL  analyze.py  experiments.tsv  full_report.py  match_outcomes.jsonl.backup  (+2 more)
(+815 files in other folders)
