[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-agent-2"
version = "2.0.0"
description = "Autonomous Polymarket trading bot — bookmaker-derived edge."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "eth-account>=0.11.0",
    "rapidfuzz>=3.0.0",
    "py-clob-client>=0.15.0",
    "websockets>=12.0",
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=4.1.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pyright]
# IDE'nin "src.*" import'larını çözebilmesi için kök dizin
extraPaths = ["."]
include = ["src", "tests"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/main.py",
    "src/presentation/dashboard/static/*",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

